[package]
name = "speaky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
data-encoding = "2.9.0"
ed25519-dalek = "2.2.0"
futures-lite = "2.6.0"
iroh = "0.90.0"
iroh-gossip = "0.90.0"
n0-watcher = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = "1.46.1"
